tests/files/lexer_tests/should_fail/057.cmdr
// Illegal character in variable name (ascii 24)
myvar = 24;